--- a/2019-9955/2019-9955.md
+++ b/2019-9955/2019-9955.md
@@ -1,6 +1,6 @@
 A reflected Cross Scripting vulnerability, CVE-2019-9955, was identified on several Zyxel devices, specifically on pages that use the **mp_idx** parameter. The affected pages (listed later in this report) do not require authentication.  
 
-### Patch
+## Patch
 
 * **ATP500**: <ftp://ftp.zyxel.com/ATP500/firmware/433ABFU0ITS-WK12-r87753.zip>
 * **USG40**: <ftp://ftp.zyxel.com/USG40/firmware/433AALA0ITS-WK12-r87753.zip>
@@ -8,7 +8,7 @@ A reflected Cross Scripting vulnerability, CVE-2019-9955, was identified on seve
 * **ZyWALL1100**: <ftp://ftp.zyxel.com/ZyWALL_1100/firmware/433AAAC0ITS-WK12-r87753.zip>
 * **ZyWALL310**: <ftp://ftp.zyxel.com/ZyWALL_310/firmware/433AAAB0ITS-WK12-r87753.zip>
 
-### Timeline
+## Timeline
 
 * 06 Feb 2019 - Issue discovered on USG40 and disclosed to Zyxel
 * 24 Feb 2019 - Issue confirmed by Zyxel, initial hotfix released
@@ -16,7 +16,7 @@ A reflected Cross Scripting vulnerability, CVE-2019-9955, was identified on seve
 * 10 Apr 2019 - Additional patches available
 * 15 Apr 2019 - Public Disclosure
 
-### Description
+## Description
 
 The issue was identified during a network layer penetration test performed by SecurityMetrics, Inc.. During this assessment, several Zyxel devices appeared on the customer's port scan. Log in pages (similar to the screenshot shown below) were accessible.
 
@@ -46,7 +46,7 @@ The `alert` is interpreted and triggered when the page is visited:
 
 ![](./alert.png)
 
-### Affected Pages and Devices
+## Affected Pages and Devices
 
 ~~~{command="Tested Pages"}
 weblogin.cgi            webauth_relogin.cgi
